[gd_scene load_steps=2 format=3 uid="uid://ciir8bxn2w4uj"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_wp05e"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wp05e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 1151.0
offset_bottom = 647.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = 448.0
offset_top = 32.0
offset_right = 616.0
offset_bottom = 74.0
scale = Vector2(2, 2)
text = "That bird game"

[node name="Label2" type="Label" parent="."]
offset_left = 429.0
offset_top = 106.0
offset_right = 563.0
offset_bottom = 135.0
scale = Vector2(2.305, 2.305)
text = "Choose A Level!"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 587.0
offset_right = 928.0
offset_bottom = 636.0
text = "Press Escape to quit or take you to the menu!
Dev Note: The escape button works only on the first screen you start on but not the next one"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 2
offset_top = 506.0
offset_right = 1127.0
offset_bottom = 529.0
text = "Killing all the fish will take you to the next level!
Press the SpaceBar to jump a randomized distance!
Yes I still haven't figured out how to actually make a launcher that shoots you where you specified!"
horizontal_alignment = 1

[node name="Level1" type="Button" parent="."]
layout_mode = 0
offset_left = 489.0
offset_top = 182.0
offset_right = 651.0
offset_bottom = 253.0
text = "Level 1"

[node name="Level2" type="Button" parent="."]
layout_mode = 0
offset_left = 487.0
offset_top = 293.0
offset_right = 653.0
offset_bottom = 365.0
text = "Level 2
"

[node name="Level3" type="Button" parent="."]
layout_mode = 0
offset_left = 487.0
offset_top = 408.0
offset_right = 652.0
offset_bottom = 478.0
text = "Level 3"
